<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccentTrans"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="48dp"
    android:paddingEnd="48dp"
    android:paddingLeft="48dp"
    android:paddingRight="48dp"
    android:paddingTop="48dp">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:contentDescription="@string/user_icon"
        android:paddingBottom="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/homelogo"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#FFF">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fname"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:id="@+id/fname_sign_up"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#FFF">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lname"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:id="@+id/lname_sign_up"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#FFF">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/phone_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="#FFFFFF"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#FFF">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:id="@+id/email_sign_up"
            android:drawableLeft="@drawable/ic_mail_outline_black_24dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#FFF">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/pwd_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:drawableLeft="@drawable/ic_lock_open_black_24dp"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/pwd_sign_up_req"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pwd_sign_up_req"
        android:textColor="@color/colorBlackTrans"
        android:visibility="visible"/>

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/sign_up"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:textSize="30sp"
        />
</LinearLayout>
